Add bronze Medals

--- a/medals.html
+++ b/medals.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Check out your Bronze medals</h1>
+	<p>We have a fine selection of medals</p>	
 </body>
 </html>
