--- a/bronze.html
+++ b/bronze.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+	<h1>Welcome to our store!</h1>
 	<h1>Check out your Bronze medals</h1>
+	<p>Please choose a section bellow</p>
 </body>
 </html>
