--- a/medals.html
+++ b/medals.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<p>We have a fine selection of medals</p>	
+	<p>   We have a fine selection of medals</p>	
+	<p>Newly added</p>
 </body>
 </html>
