--- a/medals.html
+++ b/medals.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<p>   We have a fine selection of medals</p>	
-	<p>Newly added</p>
+	<p>Thank you for shopping with us!</p>
+	<p>We have a fine selection of medals</p>	
+	<p>Plase choose a selection bellow</p>
 </body>
 </html>
