--- a/medals.html
+++ b/medals.html
@@ -4,5 +4,11 @@
 	<p>Thank you for shopping with us!</p>
 	<p>We have a fine selection of medals</p>	
 	<p>Plase choose a selection bellow</p>
+	<div>	
+		<a href="gold.html">Gold Medals</a>
+	</div>
+	<div>
+		<a href="silver.html">Silver Medals</a>
+	</div>
 </body>
 </html>
